--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
 
 .page-content {
   color: black;
-  font-family: Times New Roman , Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 2 rem;
 }
 
